# SLAM-book

./: .gitmodules  README.md
ch1/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h
ch2/: CMakeLists.txt
ch2/examples/: coordinateTransform.cpp
ch2/useEigen/: eigenMatrix.cpp
ch3/: CMakeLists.txt  trajectoryError.cpp  useSophus.cpp
ch3/examples/: plotTrajectory.cpp
ch3/useGeometry/: useGeometry.cpp
ch4/: CMakeLists.txt
ch4/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch4/stereo/: stereoVision.cpp
